Faster animations for nail view, overlapping close button fix, username font weight

--- a/src/app/main/hammers/list-item.less
+++ b/src/app/main/hammers/list-item.less
@@ -32,6 +32,7 @@
     avatar {
       a.username {
         color: @themeTextColor;
+        font-weight: 100;
       }
     }
   }
