--- a/src/app/main/nails/list-item.less
+++ b/src/app/main/nails/list-item.less
@@ -15,6 +15,7 @@
       color: @nailHeaderColor;
     }
     .username {
+      font-weight: 100;
       display: inline-block;
       vertical-align: middle;
       white-space: nowrap;
