--- a/src/app/main/nails/view.less
+++ b/src/app/main/nails/view.less
@@ -70,6 +70,8 @@
   }
   .close {
     font-size: 16px;
+    z-index: 102;
+    position: relative;
   }
   .modal-content {
     padding-top: 2px;
@@ -210,8 +212,8 @@
       min-height: initial;
       padding-bottom: 20px;
 
-      -webkit-transition: height 1s, top 1s, padding 1s;
-      transition: height 1s, top 1s, padding 1s;
+      -webkit-transition: height 0.4s, top 0.4s, padding 0.4s;
+      transition: height 0.4s, top 0.4s, padding 0.4s;
     }
     box-shadow: 0px 10px 80px 0px @nailBoxShadow !important;
 
@@ -223,9 +225,10 @@
       padding-top: 0;
       padding-bottom: 0;
       overflow: hidden;
+      opacity: 0;
 
-      -webkit-transition: height 0.5s, min-height 0.5s, padding 0.5s;
-      transition: height 0.5s, min-height 0.5s, padding 0.5s;
+      -webkit-transition: height 0.1s, min-height 0.1s, padding 0.1s;
+      transition: height 0.1s, min-height 0.1s, padding 0.1s;
     }
   }
 
